readjust log et sign

--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
 <div class="panel panel-primary">
-  <div id="log" class="panel-heading">REGISTER</div>
-    <div class="panel-body">
-      <form class="panel-body">
+  <div id="sign" class="panel-heading">REGISTER</div>
+  <!--  <div class="panel-body">
+      <form class="panel-body">-->
 
 <!--    <div id="googlelogo">-->
       <!--<a class="pull-center" id="google"> <%= image_tag('google.png', :class => "img-responsive center-block", :style => "max-width:250px") %> </a>-->
@@ -58,8 +58,8 @@
         <% end %>
       </div>
     </div>
-</div>
-</div>
+<!--</div>
+</div>-->
 <!--
           <label for="exampleInputEmail1">Email address</label>
           <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
