animation on contents

--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -102,3 +102,11 @@
     </div>
 	</div>
 </div>
+
+<script>
+    $(document).load(new function() {
+        $(".btn-primary").click(function() {
+            $(".list_contents").fadeOut().fadeIn();
+        });
+    });
+</script>
