--- a/app/views/contents/moderate.html.erb
+++ b/app/views/contents/moderate.html.erb
@@ -1,13 +1,57 @@
 <div class="container jumbotron">
-<div class="contentvideo text-center">
-	<div class="title row"><span>TITLE by Toto</span></div>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/HoZss4Sc1E0" frameborder="0" allowfullscreen></iframe>
+  <div class="contentvideo text-center">
+  <h3>TITLE <small>by Toto</small><h3>
+    <div class="embed-responsive embed-responsive-16by9" style="margin-bottom: 20px">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/D-YPnDvTCmI" frameborder="0" allowfullscreen>
+        </iframe>
+      </div>
+</div>
+<div class="vote">
+      <span class="col-sm-6 col-md-6 col-lg-6">
+      <button type="button" class="btn-vote btn btn-success btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">OK</button>
+    </span>
+    <span class="col-sm-6 col-md-6 col-lg-6">
+      <button onclick="$dialog=true;" type="button" class="btn-vote btn btn-danger btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6" data-toggle="modal" data-target="#why">Not Ok</button>
+    </span>
+  </div>
 </div>
 
-<div class="vote text-center">
-	<button type="button" class="btn-vote btn btn-success btn-success-moderate">Ok</button>
-	<button onclick="$dialog=true;" type="button" class="btn-vote btn btn-danger btn-failed-moderate" data-toggle="modal" data-target="#why">Not Ok</button>
+<div class="container jumbotron">
+  <div class="contentvideo text-center">
+  <h3>TITLE <small>by Toto</small><h3>
+    <div class="embed-responsive embed-responsive-16by9" style="margin-bottom: 20px">
+        <image class="img-responsive center-block" src="http://img-9gag-fun.9cache.com/photo/4900871_700b.jpg">
+    </image>
+      </div>
 </div>
+
+<div class="vote">
+      <span class="col-sm-6 col-md-6 col-lg-6">
+      <button type="button" class="btn-vote btn btn-success btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">OK</button>
+    </span>
+    <span class="col-sm-6 col-md-6 col-lg-6">
+      <button onclick="$dialog=true;" type="button" class="btn-vote btn btn-danger btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6" data-toggle="modal" data-target="#why">Not Ok</button>
+    </span>
+  </div>
+</div>
+<div class="container jumbotron">
+  <div class="contentvideo text-center">
+  <h3>TITLE <small>by Toto</small><h3>
+    <div class="embed-responsive embed-responsive-16by9" style="margin-bottom: 20px">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/WMdFnFjyR48" frameborder="0" allowfullscreen>
+        </iframe>
+      </div>
+</div>
+
+<div class="vote">
+      <span class="col-sm-6 col-md-6 col-lg-6">
+      <button type="button" class="btn-vote btn btn-success btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">OK</button>
+    </span>
+    <span class="col-sm-6 col-md-6 col-lg-6">
+      <button onclick="$dialog=true;" type="button" class="btn-vote btn btn-danger btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6" data-toggle="modal" data-target="#why">Not Ok</button>
+    </span>
+  </div>
+
 </div>
 <div class="modal fade" id="why">
   <div class="modal-dialog">
