--- a/app/views/contents/moderate.html.erb
+++ b/app/views/contents/moderate.html.erb
@@ -74,7 +74,7 @@
 <div id="no-more-vote" class="container jumbotron" style="display: none; padding-top: 20px">
   <div class="contentvideo text-center">
     <div class="title" style="margin:0;">
-      Plus aucun vote..
+      Other judgments will be available later...
     </div>
         <%= image_tag("waiting.png", :class => "img-responsive center-block img-rounded") %>
     </div>
