--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -70,7 +70,7 @@
           <ul id="nav" class="nav navbar-nav navbar-right">
             <li>
               <%= link_to moderate_path do %>
-                <% if is_logged? %>
+                <% if is_moderator? %>
                 <i class="fa fa-gavel fa-lg"></i>
                 <%end%>
               <%end%>
