--- a/app/views/contents/new.html.erb
+++ b/app/views/contents/new.html.erb
@@ -4,7 +4,7 @@
         <h2 class="pull-left">Upload</h2>
         <div class="btn-group pull-right" data-toggle="buttons">
             <label data-toggle="tab" href="#video_upload" class="btn btn-primary active">
-                <input id="option1" type="radio" name="options">Movie
+                <input id="option1" type="radio" name="options">Video
             </label>
             <label data-toggle="tab" href="#picture_upload" class="btn btn-primary">
                 <input id="option2" type="radio" name="options">Picture
@@ -17,7 +17,7 @@
 
     <div class="tab-content">
         <div id="video_upload" class="tab-pane active row">
-            <h4>Submission form<small> - Movie</small></h4>
+            <h4>Submission form<small> - Video</small></h4>
             <%= form_for @content do |f| %>
                 <div class="form-group">
                     <%= f.hidden_field :media_type, :value => 1 %>
@@ -72,7 +72,9 @@
         $("#inputvideo").focusout(function() {
             if ($(this).val()) {
                 $uri_code = $(this).val().split("v=");
-                $("#ytdplr").attr("src", "https://www.youtube.com/embed/" + $uri_code[$uri_code.length - 1]);
+                $embded_uri = "https://www.youtube.com/embed/" + $uri_code[$uri_code.length - 1];
+                $(this).val($embded_uri);
+                $("#ytdplr").attr("src", $embded_uri);
                 $("#video_preview").slideDown();
             } else {
                 $("#video_preview").slideUp();
