--- a/app/views/contents/vote.html.erb
+++ b/app/views/contents/vote.html.erb
@@ -66,7 +66,7 @@
 <div id="no-more-vote" class="container jumbotron" style="display: none; padding-top: 20px">
 	<div class="contentvideo text-center">
 		<div class="title" style="margin:0;">
-			Plus aucun vote..
+			No vote for the moment
 		</div>
         <%= image_tag("waiting.png", :class => "img-responsive center-block img-rounded") %>
    	</div>
