--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -2,24 +2,24 @@
 <div class="row jumbotron">
     <div class="col-sm-3"><%= image_tag("profile.png", :class => "img-responsive center-block") %></div>
     <div class="col-sm-9" style="text-align: center;">
-        <h2>PSEUDO</h2>
-        <div class="row"><span>Âge: 18 ans<span></div>
-        <div class="row"><span style="color: #0663d0;">Facebook:</span><span style="color: #239530;"> lié</span></div>
-        <div class="row"><span>Âge humouristique: 20-25 ans</span></div>
+        <h2>NICKNAME</h2>
+        <div class="row"><span>Age: 18 years<span></div>
+        <div class="row"><span style="color: #0663d0;">Facebook:</span><span style="color: #239530;"> linked</span></div>
+        <div class="row"><span>Humoristic age: 20-25 years</span></div>
     </div>
 </div>
 <div class="row jumbotron" style="padding-top: 20px;">
-    <h2>Statistiques</h2>
+    <h2>Statistics</h2>
     <div class="row">
-        <h3>Réputation</h3>
+        <h3>Reputation</h3>
         <div class="col-xs-6">Likes: <span style="color: #239530;">6</span></div>
         <div class="col-xs-6">Dislikes: <span style="color: #952323;">19</span></div>
     </div>
     <div class="row">
         <h3>Uploads</h3>
-        <div class="col-xs-6">Photos: 52</div>
-        <div class="col-xs-6">Vidéos: 12</div>
-        <div class="col-xs-6">Blagues: 1</div>
+        <div class="col-xs-6">Pictures: 52</div>
+        <div class="col-xs-6">Videos: 12</div>
+        <div class="col-xs-6">Jokes: 1</div>
     </div>
 </div>
 </div>
