Add the accept feature

--- a/app/views/contents/moderate.html.erb
+++ b/app/views/contents/moderate.html.erb
@@ -9,7 +9,7 @@
 </div>
 <div class="vote">
       <span class="col-sm-6 col-md-6 col-lg-6">
-      <button type="button" class="btn-vote btn btn-success btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">OK</button>
+      <%= button_to "Ok", accept_content_path(c), :class => "btn-vote btn btn-success btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6", :method => :put  %>
     </span>
     <span class="col-sm-6 col-md-6 col-lg-6">
       <button onclick="$dialog=true;" type="button" class="btn-vote btn btn-danger btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6" data-toggle="modal" data-target="#why">Not Ok</button>
