--- a/app/views/contents/vote.html.erb
+++ b/app/views/contents/vote.html.erb
@@ -1,3 +1,28 @@
+<% @contents.each do |c| %>
+<div class="container jumbotron" style="padding-top: 20px">
+	<div class="contentvideo text-center">
+		<h3>E=GANESH² <small>- by <%= c.member.pseudo %>, 1 hour ago.</small></h3>
+		<div class="col-lg-offset-2 col-lg-8">
+			<div class="embed-responsive embed-responsive-16by9" style="margin-bottom: 20px">
+				<iframe class="embed-responsive-item" src=<%= c.url %> frameborder="0" allowfullscreen>
+				</iframe>
+			</div>
+		</div>
+   	</div>
+   	<div class="vote">
+   		<span class="col-sm-6 col-md-6 col-lg-6">
+			<button type="button" class="btn-vote btn btn-success btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">
+				<i class="fa fa-smile-o fa-lg"></i> Funny !
+			</button>
+		</span>
+		<span class="col-sm-6 col-md-6 col-lg-6">
+			<button type="button" class="btn-vote btn btn-danger btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">
+				<i class="fa fa-meh-o fa-lg"></i> Meh...
+			</button>
+		</span>
+	</div>
+</div>
+<% end %>
 <div class="container jumbotron" style="padding-top: 20px">
 	<div class="contentvideo text-center">
 		<h3>E=GANESH² <small>- by Toto, 1 hour ago.</small></h3>
